syntax = "proto3";

package project;

option go_package = "./pkg/project";

message Investor {
  uint64 id = 1;
  uint64 money = 2;
  string full_name = 3;
  uint32 user_id = 4;
}

message AddInvestorRequest {
  Investor investor = 1;
}

message RemoveInvestorRequest {
  uint32 investor_id = 1;
}

message MoneyRequest {
  uint32 investor_id = 1;
  uint32 money = 2;
}

message InvestProjectRequest {
  uint32 investor_id = 1;
  uint32 money = 2;
  uint32 project_id = 3;
}

message InvestorResponse {
  int64 status = 1;
  string error = 2;
}